--- a/FF_control_wpf/FF_control_wpf/FF_control_wpf.csproj
+++ b/FF_control_wpf/FF_control_wpf/FF_control_wpf.csproj
@@ -61,8 +61,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\Graph.cs" />
     <Compile Include="Classes\MeasurementPoint.cs" />
-    <Compile Include="Classes\Plot.cs" />
+    <Compile Include="Classes\Diagram.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
